[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Weapon.gd" type="Script" id=1]
[ext_resource path="res://scenes/ValueInput.tscn" type="PackedScene" id=2]

[node name="Weapon" type="VBoxContainer"]
margin_left = 40.0
margin_right = 377.0
margin_bottom = 326.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="TitleLabel" type="Label" parent="."]
margin_left = 142.0
margin_top = 2.0
margin_right = 194.0
margin_bottom = 16.0
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 0.3
text = "Weapon"
align = 1
valign = 1

[node name="AttackSkill" parent="." instance=ExtResource( 2 )]
margin_top = 22.0
margin_right = 337.0
margin_bottom = 83.0
title = "Attack Skill:"
tens_buttons = true
ones_buttons = true
show_sign = false
show_percent = true
value = 0
max_value = 100
min_value = 0

[node name="HitModifier" parent="." instance=ExtResource( 2 )]
margin_top = 87.0
margin_right = 337.0
margin_bottom = 148.0
title = "Hit Modifier:"
tens_buttons = true
ones_buttons = false
show_sign = true
show_percent = true
value = 0
max_value = 100
min_value = -100

[node name="BaseDamage" parent="." instance=ExtResource( 2 )]
margin_top = 152.0
margin_right = 337.0
margin_bottom = 213.0
title = "Base Damage:"
tens_buttons = false
ones_buttons = true
show_sign = false
show_percent = false
value = 0
max_value = 100
min_value = 0

[node name="Attack" type="Button" parent="."]
margin_top = 217.0
margin_right = 337.0
margin_bottom = 247.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "Attack"

[node name="OutputLabel" type="RichTextLabel" parent="."]
margin_top = 251.0
margin_right = 337.0
margin_bottom = 326.0
size_flags_vertical = 3
size_flags_stretch_ratio = 1.2
text = "Output"
[connection signal="button_up" from="Attack" to="." method="_on_Attack_button_up"]
